service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: skills
spec:
  selector:
    app: user
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: user
    protocol: TCP
    port: 8080
    targetPort: 8080
